--- a/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
+++ b/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
@@ -38,10 +38,10 @@
 			<div>
 				<ul>
 					<li><a href="/podcasts">Podcasts+Video</a></li>
-					<li><a href="/find">Find Us</a></li>
+					<li><a href="/findus">Find Us</a></li>
 					<li><a href="/gear">Nick & Artie Gear</a></li>
 					<li><a href="/meet">Meet Nick & Artie</a></li>
-					<li><a href="/contact">Contact Us</a></li>
+					<li><a href="/contactus">Contact Us</a></li>
 				</ul>
 			</div>
 		</div>
