--- a/NickAndArtie/Views/Meet/Index.cshtml
+++ b/NickAndArtie/Views/Meet/Index.cshtml
@@ -3,4 +3,122 @@
     Layout = "~/Views/Shared/_NickAndArtie.cshtml";
 }
 
-<h2>Index</h2>
+<div class="sixteen columns">
+		
+		<div class="banner-ad">
+			<!-- begin ad tag -->
+
+			<script type="text/javascript">
+
+			//<![CDATA[
+
+			    ord = Math.random() * 10000000000000000;
+
+			    document.write('<script type="text/javascript" src="http://ad.doubleclick.net/adj/prnd/prn-danpatrick;pos=top;prntype=web;prngenre=sports;prnpage=home;sz=728x90;u=pos*top!prntype*web!prngenre*sports!prnpage*home!sz*728x90;ord=' + ord + '?"><\/script>');
+
+			//]]>
+
+			</script>
+
+			<noscript><a href="http://ad.doubleclick.net/jump/prnd/prn-danpatrick;pos=top;prntype=web;prngenre=sports;prnpage=home;sz=728x90;u=pos*top!prntype*web!prngenre*sports!prnpage*home!sz*728x90;ord=123456789?" target="_blank" ><img src="http://ad.doubleclick.net/ad/prnd/prn-danpatrick;pos=top;prntype=web;prngenre=sports;prnpage=home;sz=728x90;u=pos*top!prntype*web!prngenre*sports!prnpage*home!sz*728x90;ord=123456789?" border="0" alt="" /></a></noscript>
+
+			<!-- end ad tag -->
+		</div>
+	</div>
+	<div class="row">
+      <div class="one-third column side-column side-column-left fatest">
+		<div class="twitter-module">
+			<div class="twitter-module-heading">
+			</div>
+			<div class="twitter-module-body">
+				<div class="twitter-module-arrow">
+				</div>
+				<div id="twitter-body">
+				</div>
+				<div class="twitter-footer">
+					<a href="http://www.twitter.com" target="_blank">See More</a>
+				</div>
+			</div>
+		</div>
+		<div class="advertisement-left">
+			<!-- begin ad tag -->
+
+			<script type="text/javascript">
+
+			//<![CDATA[
+
+			    ord = Math.random() * 10000000000000000;
+
+			    document.write('<script type="text/javascript" src="http://ad.doubleclick.net/adj/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=home;sz=300x250;u=prntype*web!prngenre*sports!prnpage*home!sz*300x250;ord=' + ord + '?"><\/script>');
+
+			//]]>
+
+			</script>
+
+			<noscript><a href="http://ad.doubleclick.net/jump/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=home;sz=300x250;u=prntype*web!prngenre*sports!prnpage*home!sz*300x250;ord=123456789?" target="_blank" ><img src="http://ad.doubleclick.net/ad/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=home;sz=300x250;u=prntype*web!prngenre*sports!prnpage*home!sz*300x250;ord=123456789?" border="0" alt="" /></a></noscript>
+
+			<!-- end ad tag -->
+		</div>
+		
+		<div class="photo-module">
+			<div class="photo-module-heading">
+			</div>
+			<div class="photo-module-body">
+				<div id="PhotoReel" class="content">
+					<div class="images_container">
+						<img src="/public/images/sidead.jpg" id="photo1"/>
+						<img src="/public/images/sidead.jpg" id="photo2"/>
+						<img src="/public/images/sidead.jpg" id="photo3"/>
+						<img src="/public/images/sidead.jpg" id="photo4"/>
+						<img src="/public/images/sidead.jpg" id="photo5"/>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>     
+      <div class="one-third column side-column">
+        <div class="shows-module">
+			<div class="shows-module-heading">
+			</div>
+			<div class="shows-module-body">
+				<div class="twitter-module-arrow">
+				</div>
+				<ul>
+					<li>Eminem - I'm not afraid</li>
+					<li>Eminem - I'm not afraid</li>
+					<li>Eminem - I'm not afraid</li>
+					<li>Eminem - I'm not afraid</li>
+					<li>Eminem - I'm not afraid</li>
+				</ul>
+			</div>
+		</div> 
+		<div class="advertisement-right">
+			<!-- begin ad tag -->
+
+			<script type="text/javascript">
+
+			//<![CDATA[
+
+			    ord = Math.random() * 10000000000000000;
+
+			    document.write('<script type="text/javascript" src="http://ad.doubleclick.net/adj/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=' + ord + '?"><\/script>');
+
+			//]]>
+
+			</script>
+
+			<noscript><a href="http://ad.doubleclick.net/jump/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" target="_blank" ><img src="http://ad.doubleclick.net/ad/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" border="0" alt="" /></a></noscript>
+
+			<!-- end ad tag -->
+			
+		</div> 
+		<div class="road-module">
+			<div class="road-module-heading">
+			</div>
+			<div class="road-module-body">
+				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+			</div>
+		</div>    
+      </div>    
+    </div>
+    <hr />
