--- a/NickAndArtie/Views/Home/Index.cshtml
+++ b/NickAndArtie/Views/Home/Index.cshtml
@@ -157,13 +157,7 @@
 			<div class="shows-module-body">
 				<div class="twitter-module-arrow">
 				</div>
-				<ul>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-				</ul>
+                @{ Html.RenderPartial("PodcastSmall"); }
 			</div>
 		</div> 
 		<div class="advertisement-right">
