--- a/NickAndArtie/public/libraries/jPlayer/blue.monday/Copy of jplayer.blue.monday.css
+++ b/NickAndArtie/public/libraries/jPlayer/blue.monday/Copy of jplayer.blue.monday.css
@@ -26,12 +26,12 @@ div.jp-video {
 	font-family:Verdana, Arial, sans-serif;
 	line-height:1.6;
 	color: #666;
-	border:none;
-	background-color:none;
+	border:1px solid #009be3;
+	background-color:#eee;
 	position:relative;
 }
 div.jp-audio {
-	width:199px;
+	width:200px;
 }
 div.jp-video-270p {
 	width:480px;
@@ -78,10 +78,10 @@ div.jp-interface {
 }
 
 div.jp-audio div.jp-type-single div.jp-interface {
-	height:40px;
+	height:80px;
 }
 div.jp-audio div.jp-type-playlist div.jp-interface {
-	height:40px;
+	height:80px;
 }
 
 div.jp-video div.jp-interface {
@@ -107,8 +107,8 @@ div.jp-interface ul.jp-controls {
 }
 
 div.jp-audio ul.jp-controls {
-	width: 195px;
-	padding:0px 20px 0 30px;
+	width: 380px;
+	padding:20px 20px 0 20px;
 }
 
 div.jp-video div.jp-type-single ul.jp-controls {
@@ -124,8 +124,6 @@ div.jp-video ul.jp-controls,
 div.jp-interface ul.jp-controls li {
 	display:inline;
 	float: left;
-	padding:0;
-	border:none;
 }
 
 div.jp-interface ul.jp-controls a {
@@ -366,7 +364,7 @@ div.jp-title {
 div.jp-title,
 div.jp-playlist {
 	width:100%;
-	background-color:none;
+	background-color:#ccc;
 	border-top:1px solid #009be3;
 }
 div.jp-type-single div.jp-title,
@@ -389,7 +387,6 @@ div.jp-title li {
 div.jp-playlist li {
 	padding:5px 0 4px 20px;
 	border-bottom:1px solid #eee;
-	margin:0 0 0 0;
 }
 
 div.jp-playlist li div {
@@ -408,15 +405,14 @@ div.jp-type-playlist div.jp-playlist li.jp-playlist-current {
 	padding-left:7px;
 }
 div.jp-type-playlist div.jp-playlist a {
-	color: #fff;
+	color: #333;
 	text-decoration: none;
 }
 div.jp-type-playlist div.jp-playlist a:hover {
 	color:#0d88c1;
 }
 div.jp-type-playlist div.jp-playlist a.jp-playlist-current {
-	color:#fff;
-	font-weight:bold;
+	color:#0d88c1;
 }
 
 div.jp-type-playlist div.jp-playlist a.jp-playlist-item-remove {
