--- a/NickAndArtie/Views/Home/Index.cshtml
+++ b/NickAndArtie/Views/Home/Index.cshtml
@@ -3,6 +3,10 @@
     Layout = "~/Views/Shared/_NickAndArtie.cshtml";
 }
 
+@section PageCSS{
+    <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.css">
+}
+
 <div class="sixteen columns">
 		
 		<div class="banner-ad">
