--- a/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
+++ b/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
@@ -17,7 +17,8 @@
 	<link rel="stylesheet" href="/public/stylesheets/nanda.css">
 	<link rel="stylesheet" href="/public/libraries/ScrollBar/jquery.mCustomScrollbar.css">
 	
-	<link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.css">
+    @RenderSection("PageCSS",false)
+	
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
