--- a/NickAndArtie/Views/Podcasts/Index.cshtml
+++ b/NickAndArtie/Views/Podcasts/Index.cshtml
@@ -3,6 +3,10 @@
     Layout = "~/Views/Shared/_NickAndArtie.cshtml";
 }
 
+@section PageCSS{
+    <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.large.css">
+}
+
 <div class="sixteen columns">
 		
 		<div class="banner-ad">
@@ -33,7 +37,12 @@
 			<div class="twitter-module-body">
 				<div class="twitter-module-arrow">
 				</div>
-				<div id="twitter-body">
+				<div id="twitter-body-no">
+                    <iframe width="195" height="110" src="http://www.youtube.com/embed/8zBLdWBKdik?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="195" height="110" src="http://www.youtube.com/embed/8zBLdWBKdik?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="195" height="110" src="http://www.youtube.com/embed/8zBLdWBKdik?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="195" height="110" src="http://www.youtube.com/embed/8zBLdWBKdik?rel=0" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="195" height="110" src="http://www.youtube.com/embed/8zBLdWBKdik?rel=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<div class="twitter-footer">
 					<a href="http://www.twitter.com" target="_blank">See More</a>
@@ -59,129 +68,22 @@
 
 			<!-- end ad tag -->
 		</div>
-		
-		<div class="photo-module">
-			<div class="photo-module-heading">
-			</div>
-			<div class="photo-module-body">
-				<div id="PhotoReel" class="content">
-					<div class="images_container">
-						<img src="/public/images/sidead.jpg" id="photo1"/>
-						<img src="/public/images/sidead.jpg" id="photo2"/>
-						<img src="/public/images/sidead.jpg" id="photo3"/>
-						<img src="/public/images/sidead.jpg" id="photo4"/>
-						<img src="/public/images/sidead.jpg" id="photo5"/>
-					</div>
-				</div>
-			</div>
-		</div>
+
 	</div>
       <div class="one-third column middle-column fat">
 		<div class="feature-column-heading">
 			<img src="/public/images/hitlisttype.png">
 		</div>
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
-		
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
-		
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
+		@{ Html.RenderPartial("PodcastLarge"); }
 		
       </div>     
       <div class="one-third column side-column">
-        <div class="shows-module">
-			<div class="shows-module-heading">
-			</div>
-			<div class="shows-module-body">
-				<div class="twitter-module-arrow">
-				</div>
-				<ul>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-					<li>Eminem - I'm not afraid</li>
-				</ul>
-			</div>
+       <div class="advertisement-right">
+			@{ Html.RenderPartial("Advertisement"); }
 		</div> 
 		<div class="advertisement-right">
-			<!-- begin ad tag -->
-
-			<script type="text/javascript">
-
-			//<![CDATA[
-
-			    ord = Math.random() * 10000000000000000;
-
-			    document.write('<script type="text/javascript" src="http://ad.doubleclick.net/adj/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=' + ord + '?"><\/script>');
-
-			//]]>
-
-			</script>
-
-			<noscript><a href="http://ad.doubleclick.net/jump/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" target="_blank" ><img src="http://ad.doubleclick.net/ad/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" border="0" alt="" /></a></noscript>
-
-			<!-- end ad tag -->
-			
+			@{ Html.RenderPartial("Advertisement"); }
 		</div> 
-		<div class="road-module">
-			<div class="road-module-heading">
-			</div>
-			<div class="road-module-body">
-				Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna
-			</div>
-		</div>    
       </div>    
     </div>
     <hr />
