--- a/NickAndArtie/Views/Home/Index.cshtml
+++ b/NickAndArtie/Views/Home/Index.cshtml
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.css">
 }
 
+
+@section Playlist{
+    @{ Html.RenderPartial("Playlist"); }
+}
+
 <div class="sixteen columns">
 		
 		<div class="banner-ad">
@@ -97,59 +102,58 @@
 		</div>
 		<div class="feature-column-item">
 			<div>
-				<img src="/public/images/img_placeholder.jpg">
+                <a href="/post">
+				    <img src="/public/images/img_placeholder.jpg">
+                </a>
 			</div>
 			<h3>
-				ADAM SANDLER 5-23-12
+				<a href="/post">ADAM SANDLER 5-23-12</a>
 			</h3>
 			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
+				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...<a href="/post">Read More</a>
 			</h4>
 		</div>
 		
-		<div class="feature-column-item">
-			<div>
-				<img src="/public/images/img_placeholder.jpg">
-			</div>
-			<h3>
-				ADAM SANDLER 5-23-12
-			</h3>
-			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
-			</h4>
-		</div>
 		
-		<div class="feature-column-item">
+        <div class="feature-column-item">
 			<div>
-				<img src="/public/images/img_placeholder.jpg">
+                <a href="/post">
+				    <img src="/public/images/img_placeholder.jpg">
+                </a>
 			</div>
 			<h3>
-				ADAM SANDLER 5-23-12
+				<a href="/post">ADAM SANDLER 5-23-12</a>
 			</h3>
 			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
+				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...<a href="/post">Read More</a>
 			</h4>
 		</div>
-		<div class="feature-column-item">
+
+        <div class="feature-column-item">
 			<div>
-				<img src="/public/images/img_placeholder.jpg">
+                <a href="/post">
+				    <img src="/public/images/img_placeholder.jpg">
+                </a>
 			</div>
 			<h3>
-				ADAM SANDLER 5-23-12
+				<a href="/post">ADAM SANDLER 5-23-12</a>
 			</h3>
 			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
+				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...<a href="/post">Read More</a>
 			</h4>
 		</div>
-		<div class="feature-column-item">
+
+        <div class="feature-column-item">
 			<div>
-				<img src="/public/images/img_placeholder.jpg">
+                <a href="/post">
+				    <img src="/public/images/img_placeholder.jpg">
+                </a>
 			</div>
 			<h3>
-				ADAM SANDLER 5-23-12
+				<a href="/post">ADAM SANDLER 5-23-12</a>
 			</h3>
 			<h4>
-				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...
+				Adam weighs in on the newest movie and why he thinks tutrles are the coolest. Nick & Artie take some shots...<a href="/post">Read More</a>
 			</h4>
 		</div>
 		
