--- a/NickAndArtie/Views/Podcasts/Index.cshtml
+++ b/NickAndArtie/Views/Podcasts/Index.cshtml
@@ -6,7 +6,9 @@
 @section PageCSS{
     <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.large.css">
 }
-
+@section Playlist{
+    @{ Html.RenderPartial("Playlist"); }
+}   
 <div class="sixteen columns">
 		
 		<div class="banner-ad">
