--- a/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
+++ b/NickAndArtie/Views/Shared/_NickAndArtie.cshtml
@@ -39,7 +39,6 @@
 			<div>
 				<ul>
 					<li><a href="/podcasts">Podcasts+Video</a></li>
-					<li><a href="/findus">Find Us</a></li>
 					<li><a href="http://www.nickandartiestuff.com/" target="_blank">Nick & Artie Gear</a></li>
 					<li><a href="/meet">Meet Nick & Artie</a></li>
 					<li><a href="/contactus">Contact Us</a></li>
@@ -50,7 +49,21 @@
 	
 	<div class="container">
 	    @RenderBody() 
+
+        <div id="footer-container">
+            <ul>
+			    <li><a href="/podcasts">Podcasts+Video </a>&nbsp;|</li>
+			    <li><a href="http://www.nickandartiestuff.com/" target="_blank">Nick & Artie Gear </a>&nbsp;|</li>
+			    <li><a href="/meet">Meet Nick & Artie </a>&nbsp;|</li>
+			    <li><a href="/contactus">Contact Us</a></li>
+		    </ul>
+            <div>
+                <a href="" target="_blank"><img src="/public/images/twitter.png" /></a>&nbsp;&nbsp;
+                <a href="" target="_blank"><img src="/public/images/facebook.png" /></a>
+            </div>
+        </div>
 	</div>
+    
 	<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
 	<script src="/public/javascripts/slides.min.jquery.js"></script>
