--- a/NickAndArtie/Views/ManagePhotoReel/Create.cshtml
+++ b/NickAndArtie/Views/ManagePhotoReel/Create.cshtml
@@ -5,9 +5,9 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a new Photo</h2>
 
-@using (Html.BeginForm()) {
+<form method="post" enctype="multipart/form-data">
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -25,23 +25,21 @@
             @Html.LabelFor(model => model.ImageThumb)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ImageThumb)
-            @Html.ValidationMessageFor(model => model.ImageThumb)
+            <input type="file" name="ImageThumbUpload" />
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.ImageLarge)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ImageLarge)
-            @Html.ValidationMessageFor(model => model.ImageLarge)
+            <input type="file" name="ImageLargeUpload" />
         </div>
 
         <p>
             <input type="submit" value="Create" />
         </p>
     </fieldset>
-}
+</form>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
