--- a/NickAndArtie/Views/ManagePhotoReel/Edit.cshtml
+++ b/NickAndArtie/Views/ManagePhotoReel/Edit.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Edit</h2>
 
-@using (Html.BeginForm()) {
+<form method="post" enctype="multipart/form-data">
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -27,23 +27,25 @@
             @Html.LabelFor(model => model.ImageThumb)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ImageThumb)
-            @Html.ValidationMessageFor(model => model.ImageThumb)
+            <img src="@(Model.ImageLarge)" width="300px" />
+            @Html.HiddenFor(model => model.ImageThumb)
+            <input type="file" name="ImageThumbUpload" />
         </div>
 
         <div class="editor-label">
             @Html.LabelFor(model => model.ImageLarge)
         </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ImageLarge)
-            @Html.ValidationMessageFor(model => model.ImageLarge)
+            <img src="@(Model.ImageLarge)" width="300px" />
+            @Html.HiddenFor(model => model.ImageLarge)
+            <input type="file" name="ImageLargeUpload" />
         </div>
 
         <p>
             <input type="submit" value="Save" />
         </p>
     </fieldset>
-}
+</form>
 
 <div>
     @Html.ActionLink("Back to List", "Index")
