--- a/NickAndArtie/Views/ManagePodcasts/Create.cshtml
+++ b/NickAndArtie/Views/ManagePodcasts/Create.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Create a new Podcast</h2>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(true)
