--- a/NickAndArtie/Views/Podcasts/Index.cshtml
+++ b/NickAndArtie/Views/Podcasts/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 @section PageCSS{
-    <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.large.css">
+    <link rel="stylesheet" href="/public/libraries/jPlayer/blue.monday/jplayer.blue.monday.css">
 }
 @section Playlist{
     @{ Html.RenderPartial("Playlist",(List<NickAndArtie.Models.Podcast>)ViewBag.Podcasts); }
@@ -31,8 +31,8 @@
 			<!-- end ad tag -->
 		</div>
 	</div>
-	<div class="row">
-      <div class="one-third column side-column side-column-left">
+	<div class="row fat">
+      <div class="one-third column side-column side-column-left fatest">
 		<div class="video-module">
 			<div class="video-module-heading">
 			</div>
@@ -58,18 +58,36 @@
 		
 
 	</div>
-      <div class="one-third column middle-column fat">
-		<div class="feature-column-heading">
-			<img src="/public/images/podcasthead.png">
-		</div>
-		@{ Html.RenderPartial("PodcastLarge"); }
-		
-      </div>     
       <div class="one-third column side-column">
-       <div class="advertisement-right">
-			@{ Html.RenderPartial("Advertisement"); }
+        <div class="shows-module">
+			<div class="shows-module-heading">
+			</div>
+			<div class="shows-module-body">
+				<div class="twitter-module-arrow">
+				</div>
+				@{ Html.RenderPartial("PodcastSmall"); }
+			</div>
 		</div> 
-		
+		<div class="advertisement-right">
+			<!-- begin ad tag -->
+
+			<script type="text/javascript">
+
+			    //<![CDATA[
+
+			    ord = Math.random() * 10000000000000000;
+
+			    document.write('<script type="text/javascript" src="http://ad.doubleclick.net/adj/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=' + ord + '?"><\/script>');
+
+			    //]]>
+
+			</script>
+
+			<noscript><a href="http://ad.doubleclick.net/jump/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" target="_blank" ><img src="http://ad.doubleclick.net/ad/prnd/prn-danpatrick;prntype=web;prngenre=sports;prnpage=interior;sz=300x250;u=prntype*web!prngenre*sports!prnpage*interior!sz*300x250;ord=123456789?" border="0" alt="" /></a></noscript>
+
+			<!-- end ad tag -->
+			
+		</div>   
       </div>    
     </div>
     <hr />
